--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.7.0
+  pretty_dio_logger: ^1.4.0
+
+
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.0
+  flutter_local_notifications: ^17.2.0
+
+
+  shimmer: ^3.0.0                     # Squelettes de chargement (produits, listes)
+  carousel_slider: ^5.0.0             # Slider photos produit / bannières promo
+  badges: ^3.1.2                      # Badge sur icône panier (nb articles)
+  intl: ^0.19.0                       # Formatage prix (XAF/FCFA), dates
+  permission_handler: ^11.3.1
+
+  url_launcher: ^6.3.0                # Ouvrir WhatsApp vendeur, site, appel
+  connectivity_plus: ^6.0.0           # Détecter connexion internet (mode offline panier ?)
 
   cupertino_icons: ^1.0.8
   get: ^4.7.3
